<resources>
    <string name="app_name">LBMS</string>
    <string name="title">Welcome to Library management system. \n A fully automated management.</string>
    <string name="your_details">Your details</string>
    <string-array name="role">
        <item>Select Account Type</item>
        <item>Library Admin</item>
        <item>Library Worker</item>
        <item>Library Teacher</item>
        <item>Library Student</item>
    </string-array>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="school_college_name">School / College Name</string>
    <string name="library_name">Library name</string>
    <string name="roll_number">Roll Number</string>
    <string name="apply_details">Apply details</string>
    <string name="create_library">Create library</string>
    <string name="college_school_id">College / school ID</string>
    <string name="create">Create</string>
    <string name="contact_email">Contact email (optional)</string>
    <string name="library_details">Library Details</string>
    <string name="add_member">Add Member</string>
    <string name="email">Member Email</string>
    <string name="member_details">Member Details</string>
    <string name="search">Search</string>
    <string name="members">Members</string>
    <string name="settings">Settings</string>
    <string name="role">Role</string>
    <string-array name="user_role">
        <item>Select Role</item>
        <item>Admin</item>
        <item>Co-admin</item>
        <item>Elder</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
    <string name="books">Books</string>
    <string name="add_new_books_to_your_library">Add new Books to your Library.</string>
    <string name="added_books">Recently Added Books</string>
    <string name="book_name">Book Name</string>
    <string name="author">Book Author</string>
    <string name="book_isbn_no">Book ISBN no. (optional)</string>
    <string name="book_quantity">Book Quantity</string>
    <string name="publication">Book Publication (optional)</string>
    <string name="add_book">Add Book</string>
    <string name="book_number_by_school_college_optional">Book Number by School/College (optional)</string>
    <string name="book_for_class_semester">Book for Class / Semester (optional)</string>
    <string name="book_category">Book Category</string>
    <string name="book_for_class_semester_2">Book for Class / Semester</string>
    <string name="search_books">Search Books</string>
    <string name="apply_for_issue">Apply for Issue</string>
    <string name="search_library">Search Library</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="college_school_name">College / School name</string>
    <string name="bookmarked_library">Bookmarked Library</string>
    <string name="your_created_library">Your Created Library</string>
    <string name="username">Username</string>
    <string name="issue_time">Issue Time</string>
    <string name="on_time">On Time</string>
    <string name="library_id">Library ID</string>
    <string name="handover_book">Handover book</string>
    <string name="reject">Reject</string>
    <string name="issued_by">Issued By</string>
    <string name="submit_time">Submit Time</string>
    <string name="handed_books">Handed books</string>
    <string name="book_returned">Book Returned</string>
    <string name="logout">Logout</string>
    <string name="change_field">Change Field</string>
    <string name="change_and_apply">Change and Apply</string>
    <string-array name="book_types">
        <item>Select Book Category</item>
        <item>Arts and Music</item>
        <item>Biographies</item>
        <item>Biology</item>
        <item>Business</item>
        <item>Chemistry</item>
        <item>Comics</item>
        <item>Computer and Tech</item>
        <item>Cooking</item>
        <item>Edu and Reference</item>
        <item>Electrical</item>
        <item>Electronics</item>
        <item>Entertainment</item>
        <item>Health and Fitness</item>
        <item>History</item>
        <item>Hobbies and crafts</item>
        <item>Home and Garden</item>
        <item>Horror</item>
        <item>Kids</item>
        <item>Literature and Fiction</item>
        <item>Mathematics</item>
        <item>Mechanical</item>
        <item>Medical</item>
        <item>Mysteries</item>
        <item>Parenting</item>
        <item>Physics</item>
        <item>Religion</item>
        <item>Science</item>
        <item>Self-Help</item>
        <item>Social Sciences</item>
        <item>Sports</item>
        <item>Teen</item>
        <item>Travel</item>
        <item>Others</item>
    </string-array>
    <string-array name="book_issue_time">
        <item>Issue for 1 day</item>
        <item>Issue for 1 week</item>
        <item>Issue for 1 month</item>
        <item>Issue for 2 month</item>
        <item>Issue for 3 month</item>
        <item>Issue for 4 month</item>
        <item>Issue for 5 month</item>
        <item>Issue for 6 month</item>
        <item>Issue for 1 year</item>
    </string-array>
</resources>