<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/field_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <TextView
            android:id="@+id/issue_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/issue_time" />

        <TextView
            android:id="@+id/on_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_time" />

        <TextView
            android:id="@+id/submit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_time" />

    </LinearLayout>

</RelativeLayout>
