<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_baseline_close_24"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:background="@drawable/field_bg"
        android:hint="@string/name"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:background="@drawable/field_bg"
        android:hint="@string/phone"
        android:textSize="19sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/library_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="12dp"
        android:background="@drawable/field_bg"
        android:hint="@string/library_id"
        android:textSize="19sp"
        android:layout_marginTop="5dp"/>

    <Button
        android:onClick="logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"/>

</RelativeLayout>