<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sheet.BookBottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/book_name"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/issue_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/book_issue_time"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/field_bg" />

        <Button
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/apply_for_issue"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_bg" />

    </LinearLayout>

</FrameLayout>