<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".sheet.MemberBottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/member_details"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/role"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/user_role"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/field_bg" />

        <Button
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/apply"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginVertical="20dp"/>

        <Button
            android:id="@+id/remove"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/remove"
            android:paddingHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/button_bg" />

    </LinearLayout>

</FrameLayout>