<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashBoardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/field_bg" />

    <TextView
        android:id="@+id/bookmark_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginHorizontal="5dp"
        android:text="@string/bookmarked_library"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookmark_rv"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@id/bookmark_heading"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/library_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookmark_rv"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/your_created_library"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/library_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/library_heading"
        android:layout_marginTop="5dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/create_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_add_24"
        android:backgroundTint="@color/grey_white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/create_library" />

</RelativeLayout>